# helpdesk-guru

./: .dockerignore  .gitignore  Makefile  README.md  Reading messages.py  Sending to direct.py  compose.yaml  compose.yml  go.mod  gpt.go  main.go  parser.go  server.go
app/protos/: gpt.proto
app/services/gpt-context/: .dockerignore  .gitignore  Dockerfile  Makefile  constants.py  example.env  ingest.py  privateGPT.py  requirements.txt
docker/: compose-local.yml  compose.yml
protos/: gpt.proto  health-check.proto
services/: reading_messages.py  sending_2direct.py
services/gpt-context/: .dockerignore  .gitignore  Dockerfile  Makefile  gpt_service.py  ingest.py  main.py  openai_client.py  prompt.py  pyproject.toml  requirements.txt
services/gpt-context/adapters/: redis_adapter.py  vector_store_adapter.py  weaviate_adapter.py
services/gpt-context/gpt_context/: gpt_service.py  ingest.py  main.py  openai_client.py
services/gpt-context/gpt_context/adapters/: __init__.py  redis_adapter.py  vector_store_adapter.py  weaviate_adapter.py
services/gpt-context/gpt_context/api/: __init__.py  gpt_grpc_service.py  health_check_grpc_service.py
services/gpt-context/gpt_context/controllers/: __init__.py  gpt_controller.py
services/gpt-context/gpt_context/exceptions/: __init__.py  business_logic_exception.py  errors.py
services/gpt-context/gpt_context/services/: __init__.py  config_service.py  context_service.py  gpt_service.py  qa_service.py
services/gpt-context/gpt_context/stores/: __init__.py  conversation_store.py
services/instagram-service/: .coveragerc  .dockerignore  .env.example  Dockerfile  example.env  main.py  pyproject.toml
services/instagram-service/controller/: __init__.py
services/instagram-service/instagram_service/: __init__.py  main.py
services/instagram-service/instagram_service/controller/: __init__.py  instagram_controller.py
services/instagram-service/instagram_service/services/: __init__.py  config_service.py  gpt_service.py  instagram_service.py
services/instagram-service/src/: client.py  instagram.py
services/instagram-service/tests/: conftest.py  test_gpt_service.py  test_gpt_service_unit.py  test_instagram_controller.py  test_instagram_controller_unit.py  test_instagram_service.py  test_instagram_service_unit.py  test_integration_gpt_service.py  test_integration_instagram_controller.py  test_integration_instagram_service.py  test_main.py
services/instagram_service/: .gitignore  Dockerfile  Makefile  example.env  main.py  pyproject.toml
services/instagram_service/configs/: config_service.py
services/instagram_service/controller/: __init__.py  instagram_controller  instagram_controller.py
services/instagram_service/instagram_service/: __init__.py  main.py
services/instagram_service/instagram_service/configs/: __init__.py  config_service
services/instagram_service/instagram_service/controller/: instagram_controller
services/instagram_service/instagram_service/services/: __init__.py  gpt_service  gpt_service.py  instagram_service  instagram_service.py
services/instagram_service/src/: __init__.py  client.py  instagram.py  main.py
services/telegram-bot/: .dockerignore  Dockerfile  Makefile  config.go  env.go  go.mod  go.sum  gpt.go  main.go  telegram.go
services/whatsapp-service/: .dockerignore  .gitignore  Makefile
