[tool.poetry]
name = "gpt-context"
version = "0.1.0"
description = ""
authors = ["Pavel Karpovich <pavel.karpovich@outlook.com>"]
readme = "README.md"
packages = [{include = "gpt_context"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
tiktoken = "^0.4.0"
grpcio = "^1.56.2"
grpcio-tools = "^1.56.2"
betterproto = "^2.0.0b6"
langchain = "^0.0.329"
weaviate-client = "^3.22.1"
openai = "^0.27.8"
google-api-python-client = "^2.95.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
pymongo = "^4.4.1"

[tool.poetry.group.dev.dependencies]
betterproto = {version = "^2.0.0b6", extras = ["compiler"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
