[tool.poetry]
name = "instagram_service"
version = "0.1.0"
description = ""
authors = ["MaximPyanin <maximpyanin@icloud.com>"]
readme = "README.md"
packages = [{include = "instagram_service"}]

[tool.poetry.dependencies]
python = "^3.11.4"
instagrapi = "^1.17.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
