[tool.poetry]
name = "instagram_service"
version = "0.1.0"
description = ""
authors = ["MaximPyanin <maximpyanin@icloud.com>"]
readme = "README.md"
packages = [{include = "instagram_service"}]

[tool.poetry.dependencies]
python = "^3.11.4"
instagrapi = "^1.17.13"
pillow = "^10.0.0"
datetime = "^5.2"
asyncio = "^3.4.3"
grpc = "^1.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
